force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] Applicants related to a Patent Application.</description>
    <label>Applicant</label>
    <nameField>
        <displayFormat>PAA{00000}</displayFormat>
        <label>Applicant Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>