force-app/main/default/objects/Applicant__c/fields/IP_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Reference for this applicant on this particular patent application.</inlineHelpText>
    <label>External Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>