force-app/main/default/objects/Applicant__c/fields/Lead_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to checked if this is the lead applicant for this patent application.</inlineHelpText>
    <label>Lead Applicant</label>
    <type>Checkbox</type>
</CustomField>