force-app/main/default/objects/Applicant__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <inlineHelpText>Patent related to this applicant</inlineHelpText>
    <label>Patent</label>
    <referenceTo>Patent__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>